InsuranceLicensePackage/src/objects/License_Rule_Logic__c.object
<CustomObject>
    <fields>
        <fullName>Filter_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Rule</label>
        <referenceTo>License_Rule_Logic__c</referenceTo>
        <relationshipLabel>License Rule Logics (Filter Rule)</relationshipLabel>
        <relationshipName>Filter_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logic__c</fullName>
        <label>Logic</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>License Rule Logic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>isActive__c</columns>
        <columns>Logic__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Filter_Rule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Rule Logic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Rule Logics</pluralLabel>
    <recordTypes>
        <fullName>Filter_Rule</fullName>
        <active>true</active>
        <description>rule logic to filter records</description>
        <label>Filter Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>License_Rule</fullName>
        <active>true</active>
        <description>rule logic to filter license records</description>
        <label>License Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Filter_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
    RecordType.Name = &apos;Filter Rule&apos;, 
    IF(  
       NOT(ISBLANK(Filter_Rule__c))
    , true, false), false)</errorConditionFormula>
        <errorMessage>For filter rule logic, do not set Filter_Logic__c field</errorMessage>
    </validationRules>
</CustomObject>